unifi/resources/mongo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-mongo
  namespace: unifi
  labels:
    app: unifi-mongo
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: unifi-mongo
  template:
    metadata:
      labels:
        app: unifi-mongo
    spec:
      containers:
        - name: unifi-mongo
          image: mongo:8.3.8-noble
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
              name: tcp
              protocol: TCP
          volumeMounts:
            - name: unifi-mongo-data
              mountPath: /data/db
            - name: unifi-mongo-init
              mountPath: /docker-entrypoint-initdb.d/
              readOnly: true
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 1
              memory: 1Gi
      volumes:
        - name: unifi-mongo-data
          persistentVolumeClaim:
            claimName: unifi-mongo-data-pvc
        - name: unifi-mongo-init
          configMap:
            name: unifi-mongo-cm-init
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-mongo
  namespace: unifi
spec:
  selector:
    app: unifi-mongo
  ports:
    - name: tcp
      port: 27017
      protocol: TCP
      targetPort: 27017
  type: ClusterIP
