unifi/resources/unifi-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-controller
  namespace: unifi
  labels:
    app: unifi-controller
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: unifi-controller
  template:
    metadata:
      labels:
        app: unifi-controller
    spec:
      containers:
        - name: unifi-controller
          image: lscr.io/linuxserver/unifi-network-application:10.5.67
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8443 #admin webui
              name: https
              protocol: TCP
            - containerPort: 8080 #device comm
              name: dev-com
              protocol: TCP
            - containerPort: 3478 #stun
              name: stun
              protocol: UDP
            - containerPort: 1001 #ap discovery
              name: discovery
              protocol: UDP
            - containerPort: 8880 #guest http
              name: guest-http
              protocol: TCP
            - containerPort: 6789 #mobile throughput test
              name: mtt
              protocol: TCP
            - containerPort: 5514 #remote syslog
              name: syslog
              protocol: UDP
          volumeMounts:
            - name: unifi-config
              mountPath: /config
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 2
              memory: 1Gi
      volumes:
        - name: unifi-config
          persistentVolumeClaim:
            claimName: unifi-config-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-controller
  namespace: unifi
spec:
  selector:
    app: unifi-controller
  ports:
    - name: https
      port: 8443
      protocol: TCP
      targetPort: 8443
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-guest
  namespace: unifi
spec:
  selector:
    app: unifi-guest
  ports:
    - name: guest-http
      port: 8880
      protocol: TCP
      targetPort: 8880
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-syslog
  namespace: unifi
spec:
  selector:
    app: unifi-syslog
  ports:
    - name: syslog
      port: 5514
      protocol: TCP
      targetPort: 5514
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-backend
  namespace: unifi
  annotations:
    "lbipam.cilium.io/ips": "10.10.10.101"
spec:
  selector:
    app: unifi-controller
  ports:
    - name: dev-com
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: stun
      port: 3478
      protocol: UDP
      targetPort: 3478
    - name: discovery
      port: 1001
      protocol: UDP
      targetPort: 1001
    - name: mtt
      port: 6789
      protocol: TCP
  type: LoadBalancer
