unifi/resources/unifi-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: headers-wifi
  namespace: unifi
spec:
  headers:
    accessControlAllowMethods: ['GET', 'OPTIONS', 'PUT', 'POST', 'PATCH']
    accessControlMaxAge: 100
    browserXssFilter: true
    contentSecurityPolicy: "default-src 'none'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https:; style-src 'self' 'unsafe-inline' https:; img-src 'self' data: https:; font-src 'self' https: data:; connect-src 'self' https:; frame-src 'self' https:; media-src 'self' https:; object-src 'none'; frame-ancestors 'self'; base-uri 'self'; form-action 'self';"
    contentTypeNosniff: true
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
    customResponseHeaders:
      X-Robots-Tag: none,noarchive,nosnippet,notranslate,noimageindex
    permissionsPolicy: "camera 'none'; geolocation 'none'; microphone 'none'; payment 'none'; usb 'none'; vr 'none';"
    forceSTSHeader: true
    frameDeny: true
    sslRedirect: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    referrerPolicy: no-referrer
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: unifi-controller-webui
  namespace: unifi
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`wifi.cryogence.io`)
      services:
        - name: unifi-controller
          port: 8443
          scheme: https
      middlewares:
        - name: headers-wifi
          namespace: unifi
        - name: headers-authfwd
          namespace: authentik
  tls:
    secretName: cert-wifi-io
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: unifi-controller-guest
  namespace: unifi
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`guest.cryogence.io`)
      services:
        - name: unifi-guest
          port: 8880
          scheme: http
      middlewares: #use same headers but remove auth
        - name: headers-wifi
          namespace: unifi
        #- name: headers-authfwd
        #  namespace: authentik
  tls:
    secretName: cert-guest-io
